# Video-Lectures-To-Searchable-PDF

./: .gitignore  INSTRUCTIONS.md  README.md  environment.yml  pyproject.toml  python3.10.80s-54734,sajid-bhai.btr  python3.10.80s-57131,sajid-bhai.btr  python3.10.80s-61501,sajid-bhai.btr  requirements.txt  setup.cfg
app/: __init__.py  cli.py  config.py  ingest.py  langchain_utils.py  media.py  pipeline.py  server.py  sync.py
app/models/: __init__.py  audio.py  vision.py
app/pdf/: __init__.py  combined.py  slides.py  transcript.py
docs/: models.md
video_lectures_to_searchable_pdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
